--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
-[submodule "github__CodiePP__prngsharp.git"]
-        path = github__CodiePP__prngsharp.git
-        url = https://github.com/CodiePP/prngsharp.git
-
-[submodule "github__openssl-net__openssl-net.git"]
-        path = github__openssl-net__openssl-net.git
-        url = https://github.com/openssl-net/openssl-net.git
+[submodule "ext/prngsharp.git"]
+	path = ext/prngsharp.git
+	url = git@github.com:CodiePP/prngsharp.git
+[submodule "ext/openssl-net.git"]
+	path = ext/openssl-net.git
+	url = git@github.com:CodiePP/openssl-net.git
