--- a/base/eLyKseeR-base.OSX.fsproj
+++ b/base/eLyKseeR-base.OSX.fsproj
@@ -31,12 +31,12 @@
     <Reference Include="System.Numerics" />
     <Reference Include="System.Security" />
     <Reference Include="ManagedOpenSsl">
-	    <HintPath>../../openssl-net_development/bin/Debug/ManagedOpenSsl.dll</HintPath>
+	    <HintPath>../ext/openssl-net.git/bin/Debug/ManagedOpenSsl.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Mono.Posix" />
     <Reference Include="sharpPRNG">
-	    <HintPath>../../sharpPRNG_development/sharpPRNG/sharpPRNG/bin/Debug/sharpPRNG.dll</HintPath>
+	    <HintPath>../ext/prngsharp.git/sharpPRNG/sharpPRNG/bin/Debug/sharpPRNG.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="FSharp.Core">
@@ -182,19 +182,19 @@
     <Compile Include="src/BackupCtrl.fs">
       <Link>BackupCtrl.fs</Link>
     </Compile>
-    <None Include="../../openssl-net_development/bin/Debug/ManagedOpenSsl.dll.config">
+    <None Include="../ext/openssl-net.git/bin/Debug/ManagedOpenSsl.dll.config">
       <Link>ManagedOpenSsl.dll.config</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="../../openssl-net_development/bin/Debug/libcrypto.osx.1.0.2.dylib">
+    <None Include="../ext/openssl-net.git/bin/Debug/libcrypto.osx.1.0.2.dylib">
       <Link>libcrypto.osx.1.0.2.dylib</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="../../openssl-net_development/bin/Debug/libssl.osx.1.0.2.dylib">
+    <None Include="../ext/openssl-net.git/bin/Debug/libssl.osx.1.0.2.dylib">
       <Link>libssl.osx.1.0.2.dylib</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="../../sharpPRNG_development/sharpPRNG/sharpPRNG/bin/Debug/sharpPRNG.dll.config">
+    <None Include="../ext/prngsharp.git/sharpPRNG/sharpPRNG/bin/Debug/sharpPRNG.dll.config">
       <Link>sharpPRNG.dll.config</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
