--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ install:
   - nuget restore -PackagesDirectory packages packages.config
   - nuget restore -PackagesDirectory packages UT/packages.config
 script:
+  - git submodule update --remote
+  - cd ext/openssl-net.git/; ./build.Linux.jenkins.sh
+  - cd ../..
+  - cd ext/prngsharp.git/; ./build.Linux.jenkins.sh
+  - cd ../..
   - sn -k base/eLyKseeR.snk
   - sn -k native/eLyKseeR-native.snk
   - sn -k UT/ut.snk
