--- a/gui/LXRbackup/LXRbackup.OSX.fsproj
+++ b/gui/LXRbackup/LXRbackup.OSX.fsproj
@@ -57,6 +57,9 @@
     <Reference Include="Xwt.XamMac">
       <HintPath>..\..\packages\Xwt.XamMac.0.2.178\lib\net40\Xwt.XamMac.dll</HintPath>
     </Reference>
+    <Reference Include="FSharp.Core">
+      <HintPath>..\packages\FSharp.Core.4.7.0\lib\net45\FSharp.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
