--- a/gui/LXRrestore/LXRrestore.OSX.fsproj
+++ b/gui/LXRrestore/LXRrestore.OSX.fsproj
@@ -44,7 +44,7 @@
       <HintPath>..\..\base\bin\Debug\eLyKseeR.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Core">
-      <HintPath>..\..\packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
+      <HintPath>..\packages\FSharp.Core.4.7.0\lib\net45\FSharp.Core.dll</HintPath>
     </Reference>
     <Reference Include="Xwt">
       <HintPath>..\..\packages\Xwt.0.2.178\lib\net40\Xwt.dll</HintPath>
