--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
   - nuget restore -PackagesDirectory packages packages.config
   - nuget restore -PackagesDirectory packages UT/packages.config
   - git submodule update --remote
-  - cd ext/openssl-net.git/; ./build.Linux.jenkins.sh
+  - cd ext/elykseer-crypto; ./build.Linux.jenkins.sh
   - cd ../..
   - cd ext/prngsharp.git/; ./build.Linux.jenkins.sh
   - cd ../..
